Committing all updated files to local repository